--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_auth: ^4.19.4
   provider: ^6.1.2
   cloud_firestore: ^4.17.2
+  video_player: ^2.8.6
+  audioplayers: ^6.0.0
   # emoji_picker_flutter: ^2.0.0 Это ломает сборку)))
 
 dev_dependencies:
