--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   cloud_firestore: ^4.17.2
   video_player: ^2.8.6
   audioplayers: ^6.0.0
+  firebase_messaging: ^14.9.1
   # emoji_picker_flutter: ^2.0.0 Это ломает сборку)))
 
 dev_dependencies:
