--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/icons/news/images_add.svg
     - assets/icons/chat/
     - 'assets/icons/chat/send_mes.svg'
+    - assets/images/news/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
